--- a/WeatherWeb/.env
+++ b/WeatherWeb/.env
@@ -1,1 +1,1 @@
-WEATHER_API_KEY = "905cd672f49bad3f5e1963e959b88fcb"
+WEATHER_API_KEY = "Your API KEY" # Get your API key from https://home.openweathermap.org/api_keys
